--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;900&display=swap" rel="stylesheet">
     <title>Galaxies</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>As maiores galáxias</h1>
+        <p>E curiosidades sobre elas</p>
+    </header>
     <main>
         <div class="card">
             <img src="image/IC 1101.png" alt="Imagem da galáxia IC1101">
